--- a/pizzaria/css/style.css
+++ b/pizzaria/css/style.css
@@ -7,15 +7,15 @@
     #transp{
         display: none;
     }
-    
+
     #suporte_header{
         display: none;
     }
-    
+
     #btn_menu{
         display:none;
     }
-    
+
     #btn_menu:checked ~ #menu ul{
         margin-left:0px;
     }
@@ -41,7 +41,7 @@
     }
 
     header label:hover{
-        background-color:#ff5900; 
+        background-color:#ff5900;
     }
 
     #menu ul{
@@ -71,49 +71,49 @@
         background-color:#ff5900;
         border-top:1px solid #efefef;
     }
-    
-    
+
+
     /*HOME*/
     body{
         width: 100%;
         height: auto;
         min-height: 200px;
     }
-    
+
     #principal{
         width: 100%;
         height: auto;
         min-height: 200px;
     }
-    
+
     #mainPagina{
         width: 100%;
         height: auto;
         min-height: 200px;
     }
-    
+
     #transicao{
         width: 100%;
     }
-    
+
     #seta_esquerda{
         display: none;
     }
-    
+
     #seta_direita{
         display: none;
     }
-    
+
     #slide{
         display: none;
     }
-    
+
     #transicao{
         width: 100%;
         margin-left: auto;
         margin-right: auto;
         height: 400px;
-        background-image: url(../imagens/slide4.jpg);
+        /*background-image: url(../imagens/slide4.jpg);*/
         margin-bottom: 20px;
     }
     #introduce{
@@ -126,10 +126,10 @@
         text-align: center;
         font-weight: bold;
         font-size: 48px;
-        padding-top: 20px; 
+        padding-top: 20px;
         margin-bottom: 20px;
     }
-    
+
     #container2{
         width: 100%;
         min-height: 90px;
@@ -139,10 +139,10 @@
         text-align: center;
         font-weight: bold;
         font-size: 48px;
-        padding-top: 20px; 
+        padding-top: 20px;
         margin-bottom: 20px;
     }
-    
+
     #menu_lateral{
         width: 30%;
         min-height: 650px;
@@ -164,11 +164,11 @@
         margin-right: auto;
         padding-left: 10px;
     }
-    
+
     .teste_item:hover{
         height: auto;
     }
-    
+
     /*AJUSTES FINAIS*/
 
     a{
@@ -191,7 +191,7 @@
         min-height: 40px;
         height: auto;
     }
-    
+
     #produtos{
         width: 70%;
         min-height: 610px;
@@ -199,7 +199,7 @@
         background-color: #ffffff;
         float: right;
     }
-    
+
     .teste_produto{
         padding: 5%;
         width: 50%;
@@ -211,7 +211,7 @@
         margin-left: auto;
         margin-right: auto;
     }
-    
+
     .up_produto{
         width: 200px;
         height: 150px;
@@ -226,8 +226,8 @@
         width: 200px;
         height: 150px;
     }
-    
-    
+
+
     #busca{
         margin-top: 20px;
         margin-bottom: 20px;
@@ -250,7 +250,7 @@
         float: left;
         text-align: center;
     }
-    
+
     #img_busca{
         margin-top: 20px;
         margin-left: 2px;
@@ -259,7 +259,7 @@
         float: left;
         background-image: url(../imagens/search.png);
     }
-    
+
     .subCat{
         display: none;
 
@@ -286,7 +286,7 @@
         min-height: 40px;
         height: auto;
     }
-    
+
     #pagina_modal{
         width: 100%;
         height: 100%;
@@ -312,7 +312,6 @@
         margin-left: auto;
         margin-right: auto;
         padding: 17px;
-        margin-bottom: 13%;
     }
 
     #header_modal{
@@ -345,7 +344,7 @@
         height: 230px;
         margin-left: auto;
         margin-right: auto;
-    } 
+    }
 
     #foto_produto img{
         width: 400px;
@@ -358,8 +357,8 @@
         font-size: 18px;
         font-weight: 800;
     }
-    
-    
+
+
     /*HIST*/
     #superior_historia{
         display: none;
@@ -376,7 +375,7 @@
         display: block;
         margin-bottom: 24px;
         margin-top: 40px;
-        font-family: verdana;     
+        font-family: verdana;
     }
 
     .titulo_anos{
@@ -390,7 +389,7 @@
         background-color: #D3D3D3;
     }
 
-    
+
     /*RODAPÉ*/
 
     footer{
@@ -412,7 +411,7 @@
         color: #000;
         font-size: 35px;
     }
-    
+
     /*PROMO*/
      .teste_produto_promo{
         padding: 5%;
@@ -425,7 +424,7 @@
         margin-left: auto;
         margin-right: auto;
     }
-    
+
     .up_produto_promo{
          width: 200px;
         height: 150px;
@@ -435,12 +434,12 @@
         background-color: white;
         background-image: url(../imagens/i1.jpg);
     }
-    
+
     .up_produto_promo img{
         width: 200px;
         height: 150px;
     }
-    
+
     .down_produto_promo{
         width: 180px;
         height: 80px;
@@ -454,7 +453,7 @@
         font-family: serif;
         font-size: 20px;
     }
-    
+
      #produtos_promo{
         width: 90%;
         min-height: 610px;
@@ -465,9 +464,9 @@
         margin-left: auto;
         margin-right: auto;
     }
-    
+
     /*FALE CONOSCO*/
-    
+
     input{
         font-size: 22px;
     }
@@ -539,8 +538,8 @@
     ::-webkit-input-placeholder  { text-align: center }
     input:-moz-placeholder {text-align: center  }
     textarea:-moz-placeholder { text-align: center  }
-    
-    
+
+
      /*PIZZA DO MÊS*/
 
     #pizza_do_mes{
@@ -552,7 +551,7 @@
         margin-right: auto;
         /*background-color: #ffe2e2;*/
     }
-    
+
     #pizza_do_mes img{
         width: 405px;
         height: 250px;
@@ -571,16 +570,16 @@
         font-weight: 700;
         font-family: verdana;
     }
-    
+
 }
 
-   
+
 @media screen and (min-width:1200px){
     form{
         margin: 0px;
         padding: 0px;
     }
-    
+
     #btn_menu{
         display: none;
     }
@@ -611,7 +610,7 @@
         /*background-image: url(../imagens/bg2.jpg);*/
         background-color: #fff;
     }
-    
+
     #respons{
         display: none;
     }
@@ -621,7 +620,7 @@
         width: 1200px;
         height: 300px;
         position: relative;
-        
+
     }
 
     header{
@@ -629,7 +628,7 @@
         width: 100%;
         height: 150px;
         position: fixed;
-        
+
     }
 
     #transp{
@@ -852,7 +851,7 @@
         margin-left: auto;
         margin-right: auto;
     }
-    
+
      #produtos_promo{
         width: 90%;
         min-height: 610px;
@@ -1007,7 +1006,7 @@
         display: block;
         margin-bottom: 24px;
         margin-top: 40px;
-        font-family: verdana;     
+        font-family: verdana;
     }
 
     .titulo_anos{
@@ -1139,7 +1138,7 @@
         margin-right: auto;
         /*background-color: #ffe2e2;*/
     }
-    
+
     #pizza_do_mes img{
         width: 700px;
         height: 400px;
@@ -1294,9 +1293,8 @@
     #pagina_modal{
         width: 100%;
         height: 100%;
-        background-image: url(../imagens/bgpi.jpg);
+        /*background-image: url(../imagens/bgpi.jpg);*/
         background-attachment: fixed;
-        padding-top: 150px;
         display: none;
     }
 
@@ -1306,6 +1304,7 @@
         background-image: url(../imagens/bgpi.jpg);
         background-attachment: fixed;
         padding-top: 30px;
+        padding-bottom: 10%;
     }
 
     #corpo_modal{
@@ -1316,7 +1315,6 @@
         margin-left: auto;
         margin-right: auto;
         padding: 17px;
-        margin-bottom: 13%;
     }
 
     #header_modal{
@@ -1345,14 +1343,14 @@
     }
 
     #foto_produto{
-        width: 600px;
+        width: 500px;
         height: 250px;
         margin-left: auto;
         margin-right: auto;
-    } 
+    }
 
     #foto_produto img{
-        width: 600px;
+        width: 500px;
         height: 250px;
     }
 
@@ -1363,46 +1361,3 @@
         font-weight: 800;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
